--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </ul>
                 </div>
             </div>
-      </nav> /* Block1
+      </nav>
     <div class="container-fluid text-center">
         <div class="row align-items-center block1">
             <div class="col blk1">
