--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             Услуги
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Открытие счетов</a></li>
-            <li><a class="dropdown-item" href="#">Ипотеки</a></li>
-            <li><a class="dropdown-item" href="#">Инвестиционные счета</a></li>
-            <li><a class="dropdown-item" href="#">Кредиты для бизнеса</a></li>           
+            <li><a class="dropdown-item" href="#">Открытие счета</a></li>
+            <li><a class="dropdown-item" href="#">Ипотека</a></li>
+            <li><a class="dropdown-item" href="#">Инвестиционный счет</a></li>
+            <li><a class="dropdown-item" href="#">Кредит для бизнеса</a></li>           
           </ul>
         </li>
           <li class="nav-item dropdown">
@@ -83,7 +83,8 @@
             <li><a class="dropdown-item" href="#">Португалия</a></li>
             <li><a class="dropdown-item" href="#">Германия</a></li>
             <li><a class="dropdown-item" href="#">Канада</a></li>   
-            <li><a class="dropdown-item" href="#">Коста-Рика</a></li>  
+            <li><a class="dropdown-item" href="#">Коста-Рика</a></li> 
+            <li><a class="dropdown-item" href="#">Польша</a></li>
           </ul>
         </li>
           <li class="nav-item">
