--- a/index.html
+++ b/index.html
@@ -215,16 +215,16 @@
             Услуги
           </h6>
           <p>
-            <a href="#!" class="text-reset">Открытие счетов</a>
+            <a href="#!" class="text-reset">Открытие счета</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Ипотеки</a>
+            <a href="#!" class="text-reset">Ипотека</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Инвестиционные счета</a>
+            <a href="#!" class="text-reset">Инвестиционный счет</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Кредиты для бизнеса</a>
+            <a href="#!" class="text-reset">Кредит для бизнеса</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -246,6 +246,9 @@
           </p>
           <p>
             <a href="#!" class="text-reset">Канада</a>
+          </p>
+            <p>
+            <a href="#!" class="text-reset">Польша</a>
           </p>
         </div>
         <!-- Grid column -->
