--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <a class="nav-link" href="#">О нас</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="services.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Услуги
           </a>
           <ul class="dropdown-menu">
