--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <div class="container">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Главная</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">О нас</a>
+          <a class="nav-link" href="about.html">О нас</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="services.html">
+          <a class="nav-link" aria-current="page" href="#">
             Услуги
           </a>
         </li>
@@ -58,10 +58,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Главная</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">О нас</a>
+          <a class="nav-link" href="about.html">О нас</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="services.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
