--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Открытие счета</a></li>
             <li><a class="dropdown-item" href="#">Ипотека</a></li>
-            <li><a class="dropdown-item" href="#">Инвестиционный счет</a></li>
-            <li><a class="dropdown-item" href="#">Кредит для бизнеса</a></li>           
+            <li><a class="dropdown-item" href="#">Инвестиции</a></li>
+            <li><a class="dropdown-item" href="#">Кредиты для бизнеса</a></li>           
           </ul>
         </li>
           <li class="nav-item dropdown">
