--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="about.html">О нас</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">
+          <a class="nav-link" aria-current="page" href="services.html">
             Услуги
           </a>
         </li>
@@ -64,7 +64,7 @@
           <a class="nav-link" href="about.html">О нас</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="services.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Услуги
           </a>
           <ul class="dropdown-menu">
