--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
             Услуги
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Открытие счета</a></li>
+            <li><a class="dropdown-item" href="#account">Открытие счета</a></li>
             <li><a class="dropdown-item" href="#">Ипотека</a></li>
             <li><a class="dropdown-item" href="#">Инвестиции</a></li>
             <li><a class="dropdown-item" href="#">Кредиты для бизнеса</a></li>           
@@ -117,7 +117,7 @@
                 <p class="services-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <button type="button" class="btn btn-outline-dark">Подробнее</button>
             </div>
-            <div class="col services-card">
+            <div class="col services-card" name="account">
                 <img src="images/icons/icon-2.png" class="services-icon" alt="...">
                 <h5 class="services-title">Открытие счета</h5>
                 <p class="services-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
