--- a/index.html
+++ b/index.html
@@ -25,26 +25,11 @@
   </head>
   <body>
 <!-- SUB NAV -->
-<nav class="navbar navbar-expand-lg sub-navigation">
-    <div class="container">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">О нас</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="services.html">
-            Услуги
-          </a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#">Контакты</a>
-        </li>
-      </ul>
+<div style="background-color: #3a8454" class="container-fluid">
+    <div class="container sub-header">
+        <a href="#">Необходима срочная консультация? +33 999 99 99</a>
     </div>
-</nav>
+</div>
 <!-- SUB NAV -->   
 <!-- MAIN NAV -->     
 <nav class="navbar shadow navbar-expand-lg ">
@@ -68,7 +53,7 @@
             Услуги
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Открытие счета</a></li>
+            <li><a class="dropdown-item" href="services.html#account">Открытие счета</a></li>
             <li><a class="dropdown-item" href="#">Ипотека</a></li>
             <li><a class="dropdown-item" href="#">Инвестиции</a></li>
             <li><a class="dropdown-item" href="#">Кредиты для бизнеса</a></li>           
@@ -96,7 +81,6 @@
   <button type="button" class="btn btn-primary">RU</button>
   <button type="button" class="btn btn-primary">EN</button>
       </div>
-      <button type="button" class="shadow btn btn-green">Связаться с нами</button>
   </div>
 </nav>    
 <!-- MAIN NAV -->  
