--- a/services.html
+++ b/services.html
@@ -117,7 +117,7 @@
                 <p class="services-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <button type="button" class="btn btn-outline-dark">Подробнее</button>
             </div>
-            <div class="col services-card" name="account">
+            <div class="col services-card" id="account">
                 <img src="images/icons/icon-2.png" class="services-icon" alt="...">
                 <h5 class="services-title">Открытие счета</h5>
                 <p class="services-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
