--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="row">
         <div class="col">
             <div class="card">
-                <img class="card-img-top" src="images/alhambra-3098633.jpg" alt="Card image">
+                <img class="card-img-top" src="images/oswald-elsaboath.jpg" alt="Card image">
                 <div class="card-body">
                     <h4 class="card-title">Два испанских отеля вошли в число лучших новых отелей 2023 года</h4>
                     <p class="data">24.01.2023</p>
@@ -155,7 +155,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img class="card-img-top" src="images/alhambra-3098633.jpg" alt="Card image">
+                <img class="card-img-top" src="images/jason-dent.jpg" alt="Card image">
                 <div class="card-body">
                     <h4 class="card-title">Выкуп недвижимости в Испании за рубли</h4>
                      <p class="data">24.01.2023</p>
@@ -169,7 +169,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img class="card-img-top" src="images/alhambra-3098633.jpg" alt="Card image">
+                <img class="card-img-top" src="images/immigration.jpg" alt="Card image">
                 <div class="card-body">
                     <h4 class="card-title">Нелегальная иммиграция в Испанию за последний год сократилась</h4>
                     <p class="data">24.01.2023</p>
