--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     </div>
     </div>
     <div class="row justify-content-center ">
-        <button style="margin-top: 3rem; padding: 1rem; width: 20%" class="btn-green btn" type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#collapseNews">Посмотреть больше</button>
+        <button style="padding: 1rem; width: 20%" class="btn-green btn" type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#collapseNews">Посмотреть больше</button>
         </div>
 </div>
       
