--- a/about.html
+++ b/about.html
@@ -25,26 +25,11 @@
   </head>
   <body>
 <!-- SUB NAV -->
-<nav class="navbar navbar-expand-lg sub-navigation">
-    <div class="container">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">О нас</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="services.html">
-            Услуги
-          </a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#">Контакты</a>
-        </li>
-      </ul>
+<div style="background-color: #3a8454" class="container-fluid">
+    <div class="container sub-header">
+        <a href="contacts.html">Необходима срочная консультация? +33 999 99 99</a>
     </div>
-</nav>
+</div>
 <!-- SUB NAV -->   
 <!-- MAIN NAV -->     
 <nav class="navbar shadow navbar-expand-lg ">
@@ -88,7 +73,7 @@
           </ul>
         </li>
           <li class="nav-item">
-          <a class="nav-link" href="#">Контакты</a>
+          <a class="nav-link" href="contacts.html">Контакты</a>
         </li>
       </ul>
     </div>
