--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- SUB NAV -->
 <div style="background-color: #3a8454" class="container-fluid">
     <div class="container sub-header">
-        <a href="#">Необходима срочная консультация? +33 999 99 99</a>
+        <a href="contacts.html">Необходима срочная консультация? +33 999 99 99</a>
     </div>
 </div>
 <!-- SUB NAV -->   
@@ -79,7 +79,7 @@
           </ul>
         </li>
           <li class="nav-item">
-          <a class="nav-link" href="#">Контакты</a>
+          <a class="nav-link" href="contacts.html">Контакты</a>
         </li>
       </ul>
     </div>
