--- a/about.html
+++ b/about.html
@@ -26,11 +26,11 @@
   <body>
 <!-- SUB NAV -->
 
-<div style="background-color: #3a8454" class="container-fluid">
+<!-- <div style="background-color: #3a8454" class="container-fluid">
     <div class="container sub-header">
         <a href="contacts.html">Необходима срочная консультация? +33 999 99 99</a>
     </div>
-</div>
+</div> -->
 
  
 <!-- SUB NAV -->   
@@ -94,7 +94,7 @@
             <div class="row align-items-center block3">           
                 <div class="col-md-6 blk3">
                 <p style="margin: 0;"><i class="fi fi-br-eye"></i><small>О нашей команде</small></p>
-                <h2 class="display-5">Команда экспертов с<br> большим опытом</h2>
+                <h2 class="display-5">Команда экспертов <br>с большим кутасом</h2>
                 <p>мы кАманда гарных хлипцеу та дивчин выходим на связь с дальнего рубежа, и счАстливи делать помогать Вы, наш милый клАент. мы працуемо з 2001 року и вообще идем на взлет вот уже 20 лет. в нашем портфолио более 100500 (овер 9000+) успешных кейсов. Будем рады поработать это для Вы</p>
                 <ul class="list-group list-group-horizontal">
                     <li class="list-group-item"><h2 style="text-align: center">256</h2><p>Успешных кейсов</p></li>
