--- a/contacts.html
+++ b/contacts.html
@@ -33,11 +33,11 @@
 <!-- SUB NAV -->
 
 
-    <div style="background-color: #3a8454" class="container-fluid">
+<!--    <div style="background-color: #3a8454" class="container-fluid">
         <div class="container sub-header">
             <a href="#">Необходима срочная консультация? +33 999 99 99</a>
         </div>
-      </div>    
+      </div>   --> 
         
 <!-- SUB NAV -->   
       
