--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   </head>
   <body>
 <!-- SUB NAV -->
-<div style="background-color: #3a8454" class="container-fluid">
+<!-- <div style="background-color: #3a8454" class="container-fluid">
     <div class="container sub-header">
         <a href="contacts.html">Необходима срочная консультация? +33 999 99 99</a>
     </div>
-</div>
+</div> -->
 <!-- SUB NAV -->   
 <!-- MAIN NAV -->     
 <nav class="navbar shadow navbar-expand-lg ">
