new images + small fixes

--- a/services.html
+++ b/services.html
@@ -149,7 +149,7 @@
     <div class="row row-news">
         <div class="col">
             <div class="card card-small">
-                <img class="card-img-top" src="images/oswald-elsaboath.jpg" alt="Card image">
+                <img class="card-img-top" src="images/services-bank-account.jpg" alt="Card image">
                 <div class="card-body">
                     <h4 class="card-title">Открытие счета</h4>
                     <p class="card-text">Lorem ipsum dolor sit amet nibh consequat condimentum mi ornare. Aliquam phasellus id iaculis libero facilisis at etiam facilisis gravida pretium consectetur praesent. Fringilla quisque mi quisque egestas sodales do proin lobortis ut at vulputate phasellus etiam eu. Pharetra tempor mattis quis sodales eget at porta. Hac scelerisque senectus bibendum platea maecenas quisque magna nisi senectus condimentum a.</p>
@@ -167,7 +167,7 @@
         </div>
         <div class="col">
             <div class="card card-small">
-                <img class="card-img-top" src="images/jason-dent.jpg" alt="Card image">
+                <img class="card-img-top" src="images/services-mortgage-2.jpg" alt="Card image">
                 <div class="card-body">
                     <h4 class="card-title">Ипотека</h4>
                      
@@ -189,7 +189,7 @@
     <div class="row row-news">
         <div class="col">
             <div class="card card-small">
-                <img class="card-img-top" src="images/oswald-elsaboath.jpg" alt="Card image">
+                <img class="card-img-top" src="images/services-investment.jpg" alt="Card image">
                 <div class="card-body">
                     <h4 class="card-title">Инвестиции</h4>
                     <p class="card-text">Lorem ipsum dolor sit amet nibh consequat condimentum mi ornare. Aliquam phasellus id iaculis libero facilisis at etiam facilisis gravida pretium consectetur praesent. Fringilla quisque mi quisque egestas sodales do proin lobortis ut at vulputate phasellus etiam eu. Pharetra tempor mattis quis sodales eget at porta. Hac scelerisque senectus bibendum platea maecenas quisque magna nisi senectus condimentum a.</p>
@@ -207,7 +207,7 @@
         </div>
         <div class="col">
             <div class="card card-small">
-                <img class="card-img-top" src="images/jason-dent.jpg" alt="Card image">
+                <img class="card-img-top" src="images/services-business.jpg" alt="Card image">
                 <div class="card-body">
                     <h4 class="card-title">Кредиты для бизнеса</h4>
                      
