--- a/about.html
+++ b/about.html
@@ -24,16 +24,7 @@
 
   </head>
   <body>
-<!-- SUB NAV -->
-
-<!-- <div style="background-color: #3a8454" class="container-fluid">
-    <div class="container sub-header">
-        <a href="contacts.html">Необходима срочная консультация? +33 999 99 99</a>
-    </div>
-</div> -->
-
- 
-<!-- SUB NAV -->   
+  
 <!-- MAIN NAV -->     
 <nav class="navbar shadow navbar-expand-lg ">
   <div class="container navigation">
@@ -46,24 +37,24 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
+          <a class="nav-link" aria-current="page" href="index.html">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">О нас</a>
+          <a class="nav-link active" href="about.html">О нас</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="services.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="services.html" role="button"  aria-expanded="false">
             Услуги
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Открытие счета</a></li>
+            <li><a class="dropdown-item" href="services.html#account">Открытие счета</a></li>
             <li><a class="dropdown-item" href="#">Ипотека</a></li>
-            <li><a class="dropdown-item" href="#">Инвестиционный счет</a></li>
-            <li><a class="dropdown-item" href="#">Кредит для бизнеса</a></li>           
+            <li><a class="dropdown-item" href="#">Инвестиции</a></li>
+            <li><a class="dropdown-item" href="#">Кредиты для бизнеса</a></li>           
           </ul>
         </li>
           <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="countries.html" role="button" aria-expanded="false">
             Страны
           </a>
           <ul class="dropdown-menu">
@@ -84,9 +75,8 @@
   <button type="button" class="btn btn-primary">RU</button>
   <button type="button" class="btn btn-primary">EN</button>
       </div>
-      <button type="button" class="shadow btn btn-green">Связаться с нами</button>
   </div>
-</nav>    
+</nav>      
 <!-- MAIN NAV -->  
       
       
