--- a/countries.html
+++ b/countries.html
@@ -24,28 +24,7 @@
 
   </head>
   <body>
-<!-- SUB NAV -->
-<!-- <nav class="navbar navbar-expand-lg sub-navigation">
-    <div class="container">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">О нас</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="services.html">
-            Услуги
-          </a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#">Контакты</a>
-        </li>
-      </ul>
-    </div>
-</nav> -->
-<!-- SUB NAV -->   
+  
 <!-- MAIN NAV -->     
 <nav class="navbar shadow navbar-expand-lg ">
   <div class="container navigation">
@@ -58,37 +37,37 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
+          <a class="nav-link" aria-current="page" href="index.html">Главная</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about.html">О нас</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="services.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="services.html" role="button"  aria-expanded="false">
             Услуги
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#account">Открытие счета</a></li>
+            <li><a class="dropdown-item" href="services.html#account">Открытие счета</a></li>
             <li><a class="dropdown-item" href="#">Ипотека</a></li>
             <li><a class="dropdown-item" href="#">Инвестиции</a></li>
             <li><a class="dropdown-item" href="#">Кредиты для бизнеса</a></li>           
           </ul>
         </li>
           <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link active dropdown-toggle" href="countries.html" role="button" aria-expanded="false">
             Страны
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Испания</a></li>
             <li><a class="dropdown-item" href="#">Португалия</a></li>
-            <li><a class="dropdown-item" href="#">Германия</a></li>
+            <li><a class="dropdown-item" href="location-ger.html">Германия</a></li>
             <li><a class="dropdown-item" href="#">Канада</a></li>   
             <li><a class="dropdown-item" href="#">Коста-Рика</a></li> 
             <li><a class="dropdown-item" href="#">Польша</a></li>
           </ul>
         </li>
           <li class="nav-item">
-          <a class="nav-link" href="#">Контакты</a>
+          <a class="nav-link" href="contacts.html">Контакты</a>
         </li>
       </ul>
     </div>
@@ -96,9 +75,8 @@
   <button type="button" class="btn btn-primary">RU</button>
   <button type="button" class="btn btn-primary">EN</button>
       </div>
-      <button type="button" class="shadow btn btn-green">Связаться с нами</button>
   </div>
-</nav>    
+</nav>       
 <!-- MAIN NAV -->  
       
       <!-- BLOCK 4-->
